--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="./asetts/icon-dino.png" rel="icon">
+    <link href="./css/index.css" rel="stylesheet">
+
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
     <title>@yamiroot</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <ul class="navbar-nav">
+                <li class="logo">
+                    <a class="nav-link" href="#">
+                        <img class="" src="./asetts/icon-dino.png" alt="">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class='bx bx-home-alt bx-tada-hover bx-sm'></i>
+                        <span class="link-text">Inicio</span>
+                    </a>
+                </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="#">
+                        <i class='bx bx-user bx-tada-hover bx-sm'></i>
+                        <span class="link-text">Conóceme</span>
+                    </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class='bx bx-bookmark bx-tada-hover bx-sm'></i>
+                        <span class="link-text">Habilidades</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class='bx bxs-briefcase bx-tada-hover bx-sm'></i>
+                        <span class="link-text">Proyectos</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class='bx bx-message-square-detail bx-tada-hover bx-sm'></i>
+                        <span class="link-text">Contacto</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
+    <main>
+        <h1>TITULO</h1>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+        </P>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+        </P>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
+        </P>
+    </main>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
