instalando material design

--- a/src/index.html
+++ b/src/index.html
@@ -8,50 +8,61 @@
     <link href="./asetts/icon-dino.png" rel="icon">
     <link href="./css/index.css" rel="stylesheet">
 
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
+
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
 
     <title>@yamiroot</title>
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <div class="logo-web">
+            <img class="nav-link" src="./asetts/icon-dino.png" alt>
+        </div>
+
+        <nav class="navbar" style="background-color: blue;">
             <ul class="navbar-nav">
-                <li class="logo">
-                    <a class="nav-link" href="#">
-                        <img class="" src="./asetts/icon-dino.png" alt="">
-                    </a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class='bx bx-home-alt bx-tada-hover bx-sm'></i>
+                        <i class="bx bx-home-alt bx-tada-hover bx-sm"></i>
                         <span class="link-text">Inicio</span>
                     </a>
                 </li>
                 <li class="nav-item"></li>
                     <a class="nav-link" href="#">
-                        <i class='bx bx-user bx-tada-hover bx-sm'></i>
+                        <i class="bx bx-user bx-tada-hover bx-sm"></i>
                         <span class="link-text">Conóceme</span>
                     </a>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class='bx bx-bookmark bx-tada-hover bx-sm'></i>
+                        <i class="bx bx-bookmark bx-tada-hover bx-sm"></i>
                         <span class="link-text">Habilidades</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class='bx bxs-briefcase bx-tada-hover bx-sm'></i>
+                        <i class="bx bxs-briefcase bx-tada-hover bx-sm"></i>
                         <span class="link-text">Proyectos</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class='bx bx-message-square-detail bx-tada-hover bx-sm'></i>
+                        <i class="bx bx-message-square-detail bx-tada-hover bx-sm"></i>
                         <span class="link-text">Contacto</span>
                     </a>
                 </li>
             </ul>
         </nav>
+
+        <div style="background-color: aqua;">
+            <a class="nav-link" href="#">
+                <i class='bx bx-moon bx-tada-hover bx-sm' ></i>
+            </a>
+        </div>
     </header>
     
     <main>
