--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-  
+
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
 
@@ -20,45 +20,46 @@
 </head>
 <body>
     <header>
-        <div class="logo-web">
+        <div id="logo">
             <img class="nav-link" src="./asetts/icon-dino.png" alt>
         </div>
 
-        <nav class="navbar" style="background-color: blue;">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+        <nav id="navbar">
+            <ul id="navbar-nav">
+                <li class="nav-item fa-primary">
                     <a class="nav-link" href="#">
-                        <i class="bx bx-home-alt bx-tada-hover bx-sm"></i>
+                        <i class="bx bx-home-alt bx-tada-hover bx-md"></i>
                         <span class="link-text">Inicio</span>
                     </a>
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item fa-primary">
                     <a class="nav-link" href="#">
-                        <i class="bx bx-user bx-tada-hover bx-sm"></i>
+                        <i class="bx bx-user bx-tada-hover bx-md"></i>
                         <span class="link-text">Conóceme</span>
                     </a>
-                <li class="nav-item">
+                </li>
+                <li class="nav-item fa-primary">
                     <a class="nav-link" href="#">
-                        <i class="bx bx-bookmark bx-tada-hover bx-sm"></i>
+                        <i class="bx bx-bookmark bx-tada-hover bx-md"></i>
                         <span class="link-text">Habilidades</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item fa-primary">
                     <a class="nav-link" href="#">
-                        <i class="bx bxs-briefcase bx-tada-hover bx-sm"></i>
+                        <i class="bx bxs-briefcase bx-tada-hover bx-md"></i>
                         <span class="link-text">Proyectos</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item fa-primary">
                     <a class="nav-link" href="#">
-                        <i class="bx bx-message-square-detail bx-tada-hover bx-sm"></i>
+                        <i class="bx bx-message-square-detail bx-tada-hover bx-md"></i>
                         <span class="link-text">Contacto</span>
                     </a>
                 </li>
             </ul>
         </nav>
 
-        <div style="background-color: aqua;">
+        <div id="mode-dark" style="background-color: aqua;">
             <a class="nav-link" href="#">
                 <i class='bx bx-moon bx-tada-hover bx-sm' ></i>
             </a>
