--- a/src/index.html
+++ b/src/index.html
@@ -8,50 +8,52 @@
     <link href="./asetts/icon-dino.png" rel="icon">
     <link href="./css/index.css" rel="stylesheet">
 
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
 
+    <!-- Boxicon -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
 
     <title>@yamiroot</title>
 </head>
 <body>
     <header>
-        <div id="logo">
+        <div class="mt-3" id="logo" style="background: chartreuse;">
             <img class="nav-link" src="./asetts/icon-dino.png" alt>
         </div>
 
-        <nav id="navbar">
-            <ul id="navbar-nav">
+        <nav id="navbar" style="background-color: blue;">
+            <ul id="navbar-nav" style="background-color: brown;">
                 <li class="nav-item fa-primary">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-home-alt bx-tada-hover bx-md"></i>
                         <span class="link-text">Inicio</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-user bx-tada-hover bx-md"></i>
                         <span class="link-text">Conóceme</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-bookmark bx-tada-hover bx-md"></i>
                         <span class="link-text">Habilidades</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bxs-briefcase bx-tada-hover bx-md"></i>
                         <span class="link-text">Proyectos</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-message-square-detail bx-tada-hover bx-md"></i>
                         <span class="link-text">Contacto</span>
                     </a>
@@ -60,8 +62,8 @@
         </nav>
 
         <div id="mode-dark" style="background-color: aqua;">
-            <a class="nav-link" href="#">
-                <i class='bx bx-moon bx-tada-hover bx-sm' ></i>
+            <a href="#">
+                <i class="bx bx-moon bx-tada-hover bx-md"></i>
             </a>
         </div>
     </header>
@@ -119,5 +121,8 @@
     </main>
 
     <script src="./js/main.js"></script>
+
+    <!-- MDB -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js" type="text/javascript"></script>
 </body>
 </html>
