--- a/src/index.html
+++ b/src/index.html
@@ -21,54 +21,54 @@
     <title>@yamiroot</title>
 </head>
 <body>
-    <header>
-        <div class="mt-3" id="logo" style="background: chartreuse;">
-            <img class="nav-link" src="./asetts/icon-dino.png" alt>
+    <header class="d-flex">
+        <div class="mt-3" id="logo">
+            <img src="./asetts/icon-dino.png" alt>
         </div>
 
-        <nav id="navbar" style="background-color: blue;">
-            <ul id="navbar-nav" style="background-color: brown;">
+        <nav id="navbar" class="p-0">
+            <ul class="d-flex align-items-center p-0 m-0" id="navbar-nav">
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-home-alt bx-tada-hover bx-md"></i>
-                        <span class="link-text">Inicio</span>
+                        <span class="link-text font-weight-bold">Inicio</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-user bx-tada-hover bx-md"></i>
-                        <span class="link-text">Conóceme</span>
+                        <span class="link-text font-weight-bold">Conóceme</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-bookmark bx-tada-hover bx-md"></i>
-                        <span class="link-text">Habilidades</span>
+                        <span class="link-text font-weight-bold">Habilidades</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bxs-briefcase bx-tada-hover bx-md"></i>
-                        <span class="link-text">Proyectos</span>
+                        <span class="link-text font-weight-bold">Proyectos</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#">
                         <i class="bx bx-message-square-detail bx-tada-hover bx-md"></i>
-                        <span class="link-text">Contacto</span>
+                        <span class="link-text font-weight-bold">Contacto</span>
                     </a>
                 </li>
             </ul>
         </nav>
 
-        <div id="mode-dark" style="background-color: aqua;">
+        <div class="mb-3 justify-content-center align-items-center" id="mode-dark">
             <a href="#">
-                <i class="bx bx-moon bx-tada-hover bx-md"></i>
+                <i class="bx bx-moon bx-tada-hover bx-md text-dark"></i>
             </a>
         </div>
     </header>
     
-    <main>
+    <main class="p-3">
         <h1>TITULO</h1>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
@@ -120,9 +120,9 @@
         </P>
     </main>
 
-    <script src="./js/main.js"></script>
-
     <!-- MDB -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js" type="text/javascript"></script>
+    
+    <script src="./js/main.js"></script>
 </body>
 </html>
