--- a/src/index.html
+++ b/src/index.html
@@ -29,31 +29,31 @@
         <nav id="navbar" class="p-0">
             <ul class="d-flex align-items-center p-0 m-0" id="navbar-nav">
                 <li class="nav-item fa-primary">
-                    <a class="nav-link d-flex align-items-center" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#/home">
                         <i class="bx bx-home-alt bx-tada-hover bx-md"></i>
                         <span class="link-text font-weight-bold">Inicio</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link d-flex align-items-center" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#/aboutme">
                         <i class="bx bx-user bx-tada-hover bx-md"></i>
                         <span class="link-text font-weight-bold">Conóceme</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link d-flex align-items-center" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#/skills">
                         <i class="bx bx-bookmark bx-tada-hover bx-md"></i>
                         <span class="link-text font-weight-bold">Habilidades</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link d-flex align-items-center" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#/projects">
                         <i class="bx bxs-briefcase bx-tada-hover bx-md"></i>
                         <span class="link-text font-weight-bold">Proyectos</span>
                     </a>
                 </li>
                 <li class="nav-item fa-primary">
-                    <a class="nav-link d-flex align-items-center" href="#">
+                    <a class="nav-link d-flex align-items-center" href="#/contact">
                         <i class="bx bx-message-square-detail bx-tada-hover bx-md"></i>
                         <span class="link-text font-weight-bold">Contacto</span>
                     </a>
@@ -68,61 +68,12 @@
         </div>
     </header>
     
-    <main class="p-3">
-        <h1>TITULO</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-        </P>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-        </P>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint, dicta vel hic et dolorem tenetur ea doloribus. At, ratione ipsa? Labore a corrupti explicabo commodi dicta, enim autem beatae?
-        </P>
-    </main>
+    <main id="view" class="p-3"></main>
 
+ 
     <!-- MDB -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js" type="text/javascript"></script>
-    
-    <script src="./js/main.js"></script>
+
+    <script type="module" src="./controller/index.js"></script>
 </body>
 </html>
