--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
     <title>@yamiroot</title>    
 </head>
-<body>
+<body class="d-flex justify-content-center align-items-center m-0 p-0 flex-wrap">
     <header class="d-flex">
         <div class="mt-3" id="logo">
             <img src="./asetts/icon-dino.png" alt>
@@ -72,7 +72,7 @@
         </div>
     </header>
     
-    <main class="p-3 my-auto" id="view"></main>
+    <main class="p-3 bg-warning w-100" id="view"></main>
       
     <!-- MDB -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js" type="text/javascript"></script>
