--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
 <body class="d-flex justify-content-center align-items-center m-0 p-0 flex-wrap">
     <header class="d-flex">
         <div class="mt-3" id="logo">
-            <img src="./asetts/icon-dino.png" alt>
+            <img src="./asetts/@yamiroot.png" alt>
         </div>
 
-        <nav class="p-0" id="navbar">
+        <nav class="p-0 list-style" id="navbar">
             <ul class="d-flex align-items-center p-0 m-0" id="navbar-nav">
                 <li class="nav-item fa-primary">
                     <a class="nav-link d-flex align-items-center" href="#/home">
