--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
 </head>
 <body class="d-flex justify-content-center align-items-center m-0 p-0 flex-wrap">
     <header class="d-flex">
-        <div class="mt-3" id="logo">
-            <img src="./asetts/@yamiroot.png" alt>
+        <div class="mt-5 mx-auto p-1" id="logo">
+            <img src="./asetts/@yamiroot2.png" alt="@yamiroot">
         </div>
 
         <nav class="p-0 list-style" id="navbar">
