--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         </div>
     </header>
     
-    <main class="p-3 bg-warning w-100" id="view"></main>
+    <main class="p-3 w-100" id="view"></main>
       
     <!-- MDB -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js" type="text/javascript"></script>
