implementacion de tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <!-- Tailwind -->
+    <link href="./libraries/tailwind.css" rel="stylesheet">
+
     <title>@yamiroot</title>    
 </head>
 <body class="d-flex justify-content-center align-items-center m-0 p-0 flex-wrap">
